--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 body {
-  background: #f9f7fe;
+    background-color: aliceblue;
 }
-
 .App {
-  max-width: 800px;
-  margin: 60px auto;
+    max-width: 600px;
+    margin: 30px auto;
+}
+.App footer {
+    font-size: 11px;
+    margin: 5px 0;
 }
