--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,3 @@
 body {
-  margin: 0;
-  font-family: 
-    sans-serif;
- 
- 
-}
-
-code {
-  font-family:  'Courier New';
+    font-family: Arial, Helvetica, sans-serif;
 }
