--- a/src/Weather.css
+++ b/src/Weather.css
@@ -4,7 +4,7 @@
     border: 1px solid #dadde1;
     padding: 16px;
     margin: 30px auto;
-   
+   font-family: Arial, Helvetica, sans-serif;
     border-radius: 4px;
 
 }
@@ -15,19 +15,43 @@
     font-weight: 100;
     font-size: 24px;
    margin: 20px 0 0 0;
-    height: 28px;
     line-height: 28px;
-    display: block;
-
+    
 }
 .Weather li {
 font-size: 16px;
 font-weight: 100;
 line-height: 19px;
-text-align: left;
 list-style: none;
 }
 .Weather ul {
     margin: 0;
     padding: 0;
+}
+.Weather img {
+    height: 64px;
+    width: 64px;
+    margin-right: 10px;
+    float: left;
+    display: inline-block;
+
+}
+.Weather .temperature {
+    font-weight: bold;
+    font-weight: 400;
+    color: rgb(33, 33, 33);
+    font-size: 64px;
+    line-height: 64px;
+    margin-left: 5px;
+    margin-left: 10px;
+    
+}
+.Weather .unit {
+    color: rgb(33, 33, 33);
+    font-size: 16px;
+    font-weight: 400;
+    position: relative;
+    top: -32px;
+   
+    line-height: 1;
 }
