used the correct icon url

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -6,6 +6,7 @@
     margin: 30px auto;
    font-family: Arial, Helvetica, sans-serif;
     border-radius: 4px;
+    box-shadow: 0 30px 50px rgba(65, 50, 100, .08);
 
 }
 .Weather form {
